second round -- cetbuildtools 8 and mrb5

--- a/first_try/dunedataprep/CMakeLists.txt
+++ b/first_try/dunedataprep/CMakeLists.txt
@@ -3,20 +3,17 @@
 # ======================================================================
 
 
-# use cmake 3.14 or later
-cmake_minimum_required (VERSION 3.12...3.14 FATAL_ERROR)
-
-project(dunedataprep LANGUAGES CXX)
+cmake_minimum_required (VERSION 3.12...3.19 FATAL_ERROR)
 
 # cetbuildtools contains our cmake modules
 find_package(cetbuildtools REQUIRED)
 
-list(APPEND CMAKE_MODULE_PATH $ENV{CANVAS_ROOT_IO_DIR}/Modules)
-list(APPEND CMAKE_MODULE_PATH $ENV{ART_DIR}/Modules)
-
+project(dunedataprep VERSION 09.36.00 LANGUAGES CXX)
 
 include(CetCMakeEnv)
 cet_cmake_env()
+
+cet_cmake_module_directories(Modules BINARY)
 
 cet_set_compiler_flags(DIAGS CAUTIOUS
   WERROR
@@ -32,8 +29,24 @@ find_ups_product( canvas_root_io )
 find_ups_boost( )
 find_ups_root()
 find_ups_product( cetbuildtools )
-find_ups_product( dunecore )
+find_package( dunecore REQUIRED )
+find_ups_product( fftw )
 find_ups_geant4( )
+find_ups_product( dunecore )
+find_ups_product( larevt )
+find_ups_product( larcore )
+find_ups_product( larcoreobj )
+find_ups_product( larcorealg )
+find_ups_product( lardata )
+find_ups_product( lardataalg )
+find_ups_product( lardataobj )
+
+include(MakeDuneToolBuilder)
+include(dunecore::ToolTypes) # Enable simpler building of tools.
+
+# Define an export set for tool support to enable simpler per-tool build
+# call.
+cet_register_export_set(SET_NAME PluginTypes NAMESPACE art_plugin_types)
 
 # macros for artdaq_dictionary and simple_plugin
 include(ArtDictionary)
