--- a/first_try/duneana/CMakeLists.txt
+++ b/first_try/duneana/CMakeLists.txt
@@ -4,16 +4,12 @@
 
 
 # use cmake 3.14 or later
-cmake_minimum_required (VERSION 3.12...3.14 FATAL_ERROR)
+cmake_minimum_required (VERSION 3.19 FATAL_ERROR)
 
-project(duneana LANGUAGES CXX)
+project(duneana VERSION 09.36.00 LANGUAGES CXX)
 
 # cetbuildtools contains our cmake modules
 find_package(cetbuildtools REQUIRED)
-
-list(APPEND CMAKE_MODULE_PATH $ENV{CANVAS_ROOT_IO_DIR}/Modules)
-list(APPEND CMAKE_MODULE_PATH $ENV{ART_DIR}/Modules)
-
 
 include(CetCMakeEnv)
 cet_cmake_env()
@@ -36,6 +32,8 @@ find_ups_product( dunecore )
 find_ups_product( dunereco )
 find_ups_product( duneopdet )
 find_ups_product( larreco )
+find_ups_product( larsim )
+find_ups_product( larevt )
 find_ups_product( larpandora )
 find_ups_product( systematicstools )
 find_ups_geant4( )
