--- a/first_try/duneexamples/CMakeLists.txt
+++ b/first_try/duneexamples/CMakeLists.txt
@@ -4,16 +4,12 @@
 
 
 # use cmake 3.14 or later
-cmake_minimum_required (VERSION 3.12...3.14 FATAL_ERROR)
+cmake_minimum_required (VERSION 3.19 FATAL_ERROR)
 
-project(duneexamples LANGUAGES CXX)
+project(duneexamples VERSION 09.36.00 LANGUAGES CXX)
 
 # cetbuildtools contains our cmake modules
 find_package(cetbuildtools REQUIRED)
-
-list(APPEND CMAKE_MODULE_PATH $ENV{CANVAS_ROOT_IO_DIR}/Modules)
-list(APPEND CMAKE_MODULE_PATH $ENV{ART_DIR}/Modules)
-
 
 include(CetCMakeEnv)
 cet_cmake_env()
