--- a/first_try/dunesw/CMakeLists.txt
+++ b/first_try/dunesw/CMakeLists.txt
@@ -4,16 +4,12 @@
 
 
 # use cmake 3.14 or later
-cmake_minimum_required (VERSION 3.12...3.14 FATAL_ERROR)
+cmake_minimum_required (VERSION 3.19 FATAL_ERROR)
 
-project(dunesw LANGUAGES CXX)
+project(dunesw VERSION 09.36.00 LANGUAGES CXX)
 
 # cetbuildtools contains our cmake modules
 find_package(cetbuildtools REQUIRED)
-
-list(APPEND CMAKE_MODULE_PATH $ENV{CANVAS_ROOT_IO_DIR}/Modules)
-list(APPEND CMAKE_MODULE_PATH $ENV{ART_DIR}/Modules)
-
 
 include(CetCMakeEnv)
 cet_cmake_env()
@@ -30,6 +26,10 @@ find_ups_boost( )
 find_ups_root()
 find_ups_product( cetbuildtools )
 find_ups_product( dunecore )
+find_ups_product( larcore )
+find_ups_product( lardata )
+find_ups_product( larcorealg )
+find_ups_product( lardataalg )
 
 cet_report_compiler_flags()
 
