more fixes for v09_37_01

--- a/first_try/dunecore/CMakeLists.txt
+++ b/first_try/dunecore/CMakeLists.txt
@@ -84,9 +84,10 @@ find_ups_product( nug4 )
 find_ups_product( nugen )
 find_ups_product( nurandom )
 find_ups_product( nusimdata )
-find_ups_product( nusystematics  )
 find_ups_product( nutools )
 find_ups_product( pandora )
+find_ups_product( dunedaqdataformats )
+find_ups_product( dunedetdataformats )
 find_ups_product( postgresql v9_1_5 )
 find_ups_product( systematicstools  )
 find_ups_product( fftw )
