--- a/first_try/duneopdet/CMakeLists.txt
+++ b/first_try/duneopdet/CMakeLists.txt
@@ -39,6 +39,7 @@ find_ups_product( larcorealg )
 find_ups_product( nurandom )
 find_ups_product( dunecore )
 find_ups_product( clhep )
+find_ups_geant4( )
 
 # macros for artdaq_dictionary and simple_plugin
 include(ArtDictionary)
